--- a/todays-match.html
+++ b/todays-match.html
@@ -78,7 +78,7 @@
                                         </div>
                                         <div
                                             class="user-info-interact d-flex justify-content-evenly align-items-center mb-2">
-                                            <div>
+                                            <div data-bs-toggle="modal" data-bs-target="#sendCreditModal">
                                                 <button><img src="assets/images/icon/slider/send-credit.svg"
                                                         alt=""></button>
                                             </div>
@@ -89,7 +89,8 @@
                                             <div style="margin-top: 0.35rem !important;">
                                                 <button><img src="assets/images/icon/slider/love.svg" alt=""></button>
                                             </div>
-                                            <div>
+
+                                            <div data-bs-toggle="modal" data-bs-target="#largeModal">
                                                 <button><img src="assets/images/icon/slider/send-gift.svg"
                                                         alt=""></button>
                                             </div>
@@ -137,7 +138,7 @@
                                         </div>
                                         <div
                                             class="user-info-interact d-flex justify-content-evenly align-items-center mb-2">
-                                            <div>
+                                            <div data-bs-toggle="modal" data-bs-target="#sendCreditModal">
                                                 <button><img src="assets/images/icon/slider/send-credit.svg"
                                                         alt=""></button>
                                             </div>
@@ -148,7 +149,7 @@
                                             <div style="margin-top: 0.35rem !important;">
                                                 <button><img src="assets/images/icon/slider/love.svg" alt=""></button>
                                             </div>
-                                            <div>
+                                            <div data-bs-toggle="modal" data-bs-target="#largeModal">
                                                 <button><img src="assets/images/icon/slider/send-gift.svg"
                                                         alt=""></button>
                                             </div>
@@ -188,7 +189,7 @@
                                         </div>
                                         <div
                                             class="user-info-interact d-flex justify-content-evenly align-items-center mb-2">
-                                            <div>
+                                            <div data-bs-toggle="modal" data-bs-target="#sendCreditModal">
                                                 <button><img src="assets/images/icon/slider/send-credit.svg"
                                                         alt=""></button>
                                             </div>
@@ -199,7 +200,7 @@
                                             <div style="margin-top: 0.35rem !important;">
                                                 <button><img src="assets/images/icon/slider/love.svg" alt=""></button>
                                             </div>
-                                            <div>
+                                            <div data-bs-toggle="modal" data-bs-target="#largeModal">
                                                 <button><img src="assets/images/icon/slider/send-gift.svg"
                                                         alt=""></button>
                                             </div>
@@ -239,7 +240,7 @@
                                         </div>
                                         <div
                                             class="user-info-interact d-flex justify-content-evenly align-items-center mb-2">
-                                            <div>
+                                            <div data-bs-toggle="modal" data-bs-target="#sendCreditModal">
                                                 <button><img src="assets/images/icon/slider/send-credit.svg"
                                                         alt=""></button>
                                             </div>
@@ -250,7 +251,7 @@
                                             <div style="margin-top: 0.35rem !important;">
                                                 <button><img src="assets/images/icon/slider/love.svg" alt=""></button>
                                             </div>
-                                            <div>
+                                            <div data-bs-toggle="modal" data-bs-target="#largeModal">
                                                 <button><img src="assets/images/icon/slider/send-gift.svg"
                                                         alt=""></button>
                                             </div>
@@ -290,7 +291,7 @@
                                         </div>
                                         <div
                                             class="user-info-interact d-flex justify-content-evenly align-items-center mb-2">
-                                            <div>
+                                            <div data-bs-toggle="modal" data-bs-target="#sendCreditModal">
                                                 <button><img src="assets/images/icon/slider/send-credit.svg"
                                                         alt=""></button>
                                             </div>
@@ -301,7 +302,7 @@
                                             <div style="margin-top: 0.35rem !important;">
                                                 <button><img src="assets/images/icon/slider/love.svg" alt=""></button>
                                             </div>
-                                            <div>
+                                            <div data-bs-toggle="modal" data-bs-target="#largeModal">
                                                 <button><img src="assets/images/icon/slider/send-gift.svg"
                                                         alt=""></button>
                                             </div>
@@ -349,6 +350,195 @@
         </div>
     </div>
 
+
+    <!-- Modal Style Stored Here Start -->
+    <!-- ====================================== Send Credit Modal Start ====================================== -->
+
+    <div class="modal" id="sendCreditModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered vivify swoopInBottom">
+            <div class="modal-content">
+                <div class="send-credits-close p-3 text-end">
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="send-credits-header-dp">
+                    <div class="sch-my-dp vivify delay-500 popIn"
+                        style="background-image: url('assets/images/user/1.png');"></div>
+                    <div class="sch-her-dp vivify delay-600 popIn"
+                        style="background-image: url('assets/images/user/6.png');"></div>
+                </div>
+                <div class="send-cridit-form">
+                    <div class="vivify delay-300 fadeIn text-center my-3">
+                        <h3>Send credits to Kaylah</h3>
+                        <p>Transfer credits from your account to Kaylah</p>
+                        <div class="my-4 mx-5">
+                            <input type="number" placeholder="Add how much credits we will transfer"
+                                class="form-control">
+                        </div>
+                    </div>
+                    <div class="vivify delay-700 fadeIn text-center">
+                        <button class="send-credit-btn">Send Credit</button>
+                        <p style="color:#555;font-size: 12px;">You have <b class="userCredits">4996</b>
+                            Credits
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- ====================================== Send Credit Modal End ====================================== -->
+
+    <!-- ====================================== Send Gift Modal Start ====================================== -->
+    <!-- Large modal -->
+    <div class="modal fade" id="largeModal" tabindex="-1" aria-labelledby="largeModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg vivify swoopInBottom modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header modalHeaderbg">
+                    <div></div>
+                    <div>
+                        <h1 class="modal-title d-flex justify-content-center align-items-center fs-5"
+                            id="exampleModalToggleLabel">Sending gift to
+                            <div class="send-gift-dp mx-3" style="background-image: url(assets/images/user/6.png);">
+                            </div>
+                            Gab
+
+                        </h1>
+                    </div>
+                    <div>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                </div>
+                <div class="modal-body">
+                    <div class="container text-center">
+                        <div class="row">
+                            <div class="col-md-3 mb-3">
+                                <div class="sendGiftBox p-2 rounded-3 2nd_lunch">
+                                    <h6>Heart 2</h6>
+                                    <img width="80" src="assets/images/gift/1.png" alt="">
+                                    <div class="">
+                                        <span class="gradient5" style="text-align:center;color:#ffffff;border-radius:5px;padding:
+                                                        5px 15px;">
+                                            25 Credits
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-3 mb-3">
+                                <div class="sendGiftBox p-2 rounded-3 2nd_lunch">
+                                    <h6>Heart 2</h6>
+                                    <img width="80" src="assets/images/gift/2.png" alt="">
+                                    <div class="">
+                                        <span class="gradient5" style="text-align:center;color:#ffffff;border-radius:5px;padding:
+                                                        5px 15px;">
+                                            25 Credits
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-3 mb-3">
+                                <div class="sendGiftBox p-2 rounded-3 2nd_lunch">
+                                    <h6>Heart 2</h6>
+                                    <img width="80" src="assets/images/gift/3.png" alt="">
+                                    <div class="">
+                                        <span class="gradient5" style="text-align:center;color:#ffffff;border-radius:5px;padding:
+                                                        5px 15px;">
+                                            25 Credits
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-3 mb-3">
+                                <div class="sendGiftBox p-2 rounded-3 2nd_lunch">
+                                    <h6>Heart 2</h6>
+                                    <img width="80" src="assets/images/gift/4.png" alt="">
+                                    <div class="">
+                                        <span class="gradient5" style="text-align:center;color:#ffffff;border-radius:5px;padding:
+                                                        5px 15px;">
+                                            25 Credits
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-3 mb-3">
+                                <div class="sendGiftBox p-2 rounded-3 2nd_lunch">
+                                    <h6>Heart 2</h6>
+                                    <img width="80" src="assets/images/gift/5.png" alt="">
+                                    <div class="">
+                                        <span class="gradient5" style="text-align:center;color:#ffffff;border-radius:5px;padding:
+                                                        5px 15px;">
+                                            25 Credits
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-3 mb-3">
+                                <div class="sendGiftBox p-2 rounded-3 2nd_lunch">
+                                    <h6>Heart 2</h6>
+                                    <img width="80" src="assets/images/gift/6.png" alt="">
+                                    <div class="">
+                                        <span class="gradient5" style="text-align:center;color:#ffffff;border-radius:5px;padding:
+                                                        5px 15px;">
+                                            25 Credits
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-3 mb-3">
+                                <div class="sendGiftBox p-2 rounded-3 2nd_lunch">
+                                    <h6>Heart 2</h6>
+                                    <img width="80" src="assets/images/gift/7.png" alt="">
+                                    <div class="">
+                                        <span class="gradient5" style="text-align:center;color:#ffffff;border-radius:5px;padding:
+                                                        5px 15px;">
+                                            25 Credits
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Small modal -->
+    <div class="modal fade" id="smallModal" tabindex="-1" aria-labelledby="smallModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-sm swoopInBottom vivify modal-dialog-centered">
+            <div class="modal-content">
+                <div class="d-flex justify-content-end p-2">
+                    <button type="button" class="text-end" data-bs-dismiss="modal" aria-label="Close">
+                        <i class="ri-arrow-down-s-line fs-2 text-black"></i>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="innerSmall-wrap">
+                        <img src="assets/images/gift/3.png" class="vivify popIn delay-300" alt="">
+                        <div class="ovl-promo-label vivify popIn delay-500 gradient18"
+                            style="width: 32px;height: 32px;background: gradient18;border-radius: 50px;text-align: center;padding: 0;margin: 0;border: none">
+                            <b style="color:#fff;;line-height: 32px;" data-gift-price="">50</b>
+                        </div>
+                    </div>
+                    <div class="text-center ">
+                        <div class="btn montserrat gradient5 sendGiftbtn my-3" style="background: gradient5"
+                            id="send-gift-btn"> <span class="btn-txt" style="color: #fff">Send
+                                gift</span> </div>
+                        <p class="">
+                            Service cost: 50 Credits
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- ====================================== Send Gift Modal End ====================================== -->
+    <!-- Modal Style Stored Here End -->
+
+
+
+
+
     <!-- ==== Script File ==== -->
     <script src="assets/js/jquery-3.6.4.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
@@ -363,6 +553,25 @@
                 fade: true,
                 cssEase: 'linear',
                 arrows: false
+            });
+        });
+    </script>
+
+    <!-- 2 Way Modal -->
+    <script>
+        $(document).on('hide.bs.modal', function (e) {
+            $(e.target).find('.modal-dialog').addClass('swoopOutBottom');
+        });
+
+        $(document).on('hidden.bs.modal', function (e) {
+            $(e.target).find('.modal-dialog').removeClass('swoopOutBottom');
+        });
+
+        $(document).ready(function () {
+            $('#largeModal').on('shown.bs.modal', function () {
+                $('.2nd_lunch').on('click', function () {
+                    $('#smallModal').modal('show');
+                });
             });
         });
     </script>
