Todays match gift

--- a/todays-match.html
+++ b/todays-match.html
@@ -411,7 +411,7 @@
                 <div class="modal-body">
                     <div class="container text-center">
                         <div class="row">
-                            <div class="col-md-3 mb-3">
+                            <div class="col-6 mb-3">
                                 <div class="sendGiftBox p-2 rounded-3 2nd_lunch">
                                     <h6>Heart 2</h6>
                                     <img width="80" src="assets/images/gift/1.png" alt="">
@@ -423,7 +423,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-3 mb-3">
+                            <div class="col-6 mb-3">
                                 <div class="sendGiftBox p-2 rounded-3 2nd_lunch">
                                     <h6>Heart 2</h6>
                                     <img width="80" src="assets/images/gift/2.png" alt="">
@@ -435,7 +435,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-3 mb-3">
+                            <div class="col-6 mb-3">
                                 <div class="sendGiftBox p-2 rounded-3 2nd_lunch">
                                     <h6>Heart 2</h6>
                                     <img width="80" src="assets/images/gift/3.png" alt="">
@@ -447,7 +447,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-3 mb-3">
+                            <div class="col-6 mb-3">
                                 <div class="sendGiftBox p-2 rounded-3 2nd_lunch">
                                     <h6>Heart 2</h6>
                                     <img width="80" src="assets/images/gift/4.png" alt="">
@@ -459,7 +459,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-3 mb-3">
+                            <div class="col-6 mb-3">
                                 <div class="sendGiftBox p-2 rounded-3 2nd_lunch">
                                     <h6>Heart 2</h6>
                                     <img width="80" src="assets/images/gift/5.png" alt="">
@@ -471,7 +471,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-3 mb-3">
+                            <div class="col-6 mb-3">
                                 <div class="sendGiftBox p-2 rounded-3 2nd_lunch">
                                     <h6>Heart 2</h6>
                                     <img width="80" src="assets/images/gift/6.png" alt="">
@@ -483,7 +483,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-3 mb-3">
+                            <div class="col-6 mb-3">
                                 <div class="sendGiftBox p-2 rounded-3 2nd_lunch">
                                     <h6>Heart 2</h6>
                                     <img width="80" src="assets/images/gift/7.png" alt="">
