--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </a>
         </div>
         <div class="landing-bg">
-            <img class="img-fluid" src="assets/images/landing/landing.svg" alt="">
+            <img class="img-fluid" src="assets/images/landing/2.png" alt="">
         </div>
     </div>
 
