Modal full width and header logo added

--- a/todays-match.html
+++ b/todays-match.html
@@ -24,7 +24,10 @@
     <header class="header-wrap shadow-2 py-3">
         <div class="container">
             <div class="d-flex justify-content-between align-items-center">
-                <div></div>
+                <!-- <div></div> -->
+                <div>
+                    <img width="150" src="assets/images/dark-logo.svg" alt="">
+                </div>
                 <div class="d-flex">
                     <div class="me-4">
                         <a href="search.html">
@@ -391,7 +394,7 @@
     <!-- ====================================== Send Gift Modal Start ====================================== -->
     <!-- Large modal -->
     <div class="modal fade" id="largeModal" tabindex="-1" aria-labelledby="largeModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg vivify swoopInBottom modal-dialog-centered">
+        <div class="modal-dialog modal-fullscreen-sm-down modal-lg vivify swoopInBottom modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header modalHeaderbg">
                     <div></div>
