Credit Modal fullScreen

--- a/todays-match.html
+++ b/todays-match.html
@@ -358,7 +358,7 @@
     <!-- ====================================== Send Credit Modal Start ====================================== -->
 
     <div class="modal" id="sendCreditModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered vivify swoopInBottom">
+        <div class="modal-dialog modal-fullscreen-sm-down modal-dialog-centered vivify swoopInBottom">
             <div class="modal-content">
                 <div class="send-credits-close p-3 text-end">
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
