Send Credits Update

--- a/todays-match.html
+++ b/todays-match.html
@@ -359,31 +359,34 @@
 
     <div class="modal" id="sendCreditModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-fullscreen-sm-down modal-dialog-centered vivify swoopInBottom">
-            <div class="modal-content">
-                <div class="send-credits-close p-3 text-end">
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="send-credits-header-dp">
-                    <div class="sch-my-dp vivify delay-500 popIn"
-                        style="background-image: url('assets/images/user/1.png');"></div>
-                    <div class="sch-her-dp vivify delay-600 popIn"
-                        style="background-image: url('assets/images/user/6.png');"></div>
-                </div>
-                <div class="send-cridit-form">
-                    <div class="vivify delay-300 fadeIn text-center my-3">
-                        <h3>Send credits to Kaylah</h3>
-                        <p>Transfer credits from your account to Kaylah</p>
-                        <div class="my-4 mx-5">
-                            <input type="number" placeholder="Add how much credits we will transfer"
-                                class="form-control">
+            <div class="modal-content d-flex justify-content-around">
+                <div>
+                    <div class="send-credits-close p-3 text-end">
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="send-credits-header-dp">
+                        <div class="sch-my-dp vivify delay-500 popIn"
+                            style="background-image: url('assets/images/user/1.png');"></div>
+                        <div class="sch-her-dp vivify delay-600 popIn"
+                            style="background-image: url('assets/images/user/6.png');"></div>
+                    </div>
+                    <div class="send-cridit-form">
+                        <div class="vivify delay-300 fadeIn text-center my-3">
+                            <h3>Send credits to Kaylah</h3>
+                            <p>Transfer credits from your account to Kaylah</p>
+
                         </div>
                     </div>
-                    <div class="vivify delay-700 fadeIn text-center">
-                        <button class="send-credit-btn">Send Credit</button>
-                        <p style="color:#555;font-size: 12px;">You have <b class="userCredits">4996</b>
-                            Credits
-                        </p>
+
+                </div>
+                <div class="vivify delay-700 fadeIn text-center">
+                    <div class="my-4 mx-5">
+                        <input type="number" placeholder="Add how much credits we will transfer" class="form-control">
                     </div>
+                    <button class="send-credit-btn">Send Credit</button>
+                    <p style="color:#555;font-size: 12px;">You have <b class="userCredits">4996</b>
+                        Credits
+                    </p>
                 </div>
             </div>
         </div>
