--- a/todays-match.html
+++ b/todays-match.html
@@ -359,7 +359,7 @@
 
     <div class="modal" id="sendCreditModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-fullscreen-sm-down modal-dialog-centered vivify swoopInBottom">
-            <div class="modal-content d-flex justify-content-around">
+            <div class="modal-content d-flex justify-content-between">
                 <div>
                     <div class="send-credits-close p-3 text-end">
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -379,7 +379,7 @@
                     </div>
 
                 </div>
-                <div class="vivify delay-700 fadeIn text-center">
+                <div class="vivify delay-700 fadeIn text-center padding-bottom">
                     <div class="my-4 mx-5">
                         <input type="number" placeholder="Add how much credits we will transfer" class="form-control">
                     </div>
