--- a/my-match.html
+++ b/my-match.html
@@ -56,7 +56,8 @@
 
                 <!-- Main Content Start  -->
                 <div class="main-content">
-                    <div class="mr-slider-wrap my-match-pages slider-full-height rounded-4">
+
+                    <div class="mr-slider-wrap my-5 my-match-pages slider-full-height rounded-4">
                         <div class="mr-slider-dp rounded-4" style="background-image: url('assets/images/user/2.png');">
                             <div class="d-flex justify-content-between flex-column h-100">
                                 <div class="text-end">
@@ -107,7 +108,7 @@
                         </div>
                     </div>
 
-                    <div class="mr-slider-wrap slider-full-height rounded-4">
+                    <div class="mr-slider-wrap my-5 slider-full-height rounded-4">
                         <div class="mr-slider-dp match-card-blur rounded-4"
                             style="background-image: url('assets/images/user/blur.png');">
                             <div class="d-flex justify-content-between flex-column h-100">
@@ -166,7 +167,7 @@
                         </div>
                     </div>
 
-                    <div class="mr-slider-wrap my-match-pages bg-danger slider-full-height rounded-4">
+                    <div class="mr-slider-wrap my-5 my-match-pages slider-full-height rounded-4">
                         <div class="mr-slider-dp rounded-4" style="background-image: url('assets/images/user/1.png');">
                             <div class="d-flex justify-content-between flex-column h-100">
                                 <div class="text-end">
@@ -216,7 +217,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="mr-slider-wrap my-match-pages bg-danger slider-full-height rounded-4">
+
+                    <div class="mr-slider-wrap my-5 my-match-pages slider-full-height rounded-4">
                         <div class="mr-slider-dp rounded-4" style="background-image: url('assets/images/user/3.png');">
                             <div class="d-flex justify-content-between flex-column h-100">
                                 <div class="text-end">
@@ -266,6 +268,7 @@
                             </div>
                         </div>
                     </div>
+
                 </div>
                 <!-- Footer Menu Start  -->
                 <div class="footer-bg">
