Send Credits Update

--- a/my-match.html
+++ b/my-match.html
@@ -108,7 +108,7 @@
                         </div>
                     </div>
 
-                    <div class="mr-slider-wrap my-5 slider-full-height rounded-4">
+                    <div class="mr-slider-wrap my-5 my-match-pages slider-full-height rounded-4">
                         <div class="mr-slider-dp match-card-blur rounded-4"
                             style="background-image: url('assets/images/user/blur.png');">
                             <div class="d-flex justify-content-between flex-column h-100">
