--- a/activity.html
+++ b/activity.html
@@ -20,11 +20,13 @@
     <div id="preloader">
         <div class="preloader-circle"></div>
     </div>
-
     <header class="header-wrap shadow-2 py-3">
         <div class="container">
             <div class="d-flex justify-content-between align-items-center">
-                <div></div>
+                <!-- <div></div> -->
+                <div>
+                    <img width="150" src="assets/images/dark-logo.svg" alt="">
+                </div>
                 <div class="d-flex">
                     <div class="me-4">
                         <a href="search.html">
@@ -207,7 +209,83 @@
                         <div class="tab-pane fade" id="pills-you-viewed" role="tabpanel"
                             aria-labelledby="pills-you-viewed-tab" tabindex="0">
 
-                            <h3>2</h3>
+                            <div class="user-card-wrap">
+                                <div class="user-single-card p-3 bg-white rounded-4">
+                                    <div class="uc-dp" style="background-image: url('assets/images/user/blur.png');"></div>
+                                    <div class="uc-info">
+                                        <h3>Jasemine Jessy</h3>
+                                        <p>Cape Town</p>
+                                        <div class="uc-btn">
+                                            <button>
+                                                <i class="ri-heart-fill"></i>
+                                            </button>
+                                            <button>
+                                                <i class="ri-chat-2-fill"></i>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="user-single-card p-3 bg-white rounded-4">
+                                    <div class="uc-dp" style="background-image: url('assets/images/user/2.png');"></div>
+                                    <div class="uc-info">
+                                        <h3>Jasemine Jessy</h3>
+                                        <p>Cape Town</p>
+                                        <div class="uc-btn">
+                                            <button>
+                                                <i class="ri-close-circle-fill"></i>
+                                            </button>
+                                            <button>
+                                                <i class="ri-chat-2-fill"></i>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="user-single-card p-3 bg-white rounded-4">
+                                    <div class="uc-dp" style="background-image: url('assets/images/user/3.png');"></div>
+                                    <div class="uc-info">
+                                        <h3>Jasemine Jessy</h3>
+                                        <p>Cape Town</p>
+                                        <div class="uc-btn">
+                                            <button>
+                                                <i class="ri-heart-fill"></i>
+                                            </button>
+                                            <button>
+                                                <i class="ri-chat-2-fill"></i>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="user-single-card p-3 bg-white rounded-4">
+                                    <div class="uc-dp" style="background-image: url('assets/images/user/4.png');"></div>
+                                    <div class="uc-info">
+                                        <h3>Jasemine Jessy</h3>
+                                        <p>Cape Town</p>
+                                        <div class="uc-btn">
+                                            <button>
+                                                <i class="ri-heart-fill"></i>
+                                            </button>
+                                            <button>
+                                                <i class="ri-chat-2-fill"></i>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="user-single-card p-3 bg-white rounded-4">
+                                    <div class="uc-dp" style="background-image: url('assets/images/user/5.png');"></div>
+                                    <div class="uc-info">
+                                        <h3>Jasemine Jessy</h3>
+                                        <p>Cape Town</p>
+                                        <div class="uc-btn">
+                                            <button>
+                                                <i class="ri-close-circle-fill"></i>
+                                            </button>
+                                            <button>
+                                                <i class="ri-chat-2-fill"></i>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
 
                         </div>
                         <div class="tab-pane fade" id="pills-connections" role="tabpanel"
