--- a/my-match.html
+++ b/my-match.html
@@ -23,7 +23,10 @@
     <header class="header-wrap shadow-2 py-3">
         <div class="container">
             <div class="d-flex justify-content-between align-items-center">
-                <div></div>
+                <!-- <div></div> -->
+                <div>
+                    <img width="150" src="assets/images/dark-logo.svg" alt="">
+                </div>
                 <div class="d-flex">
                     <div class="me-4">
                         <a href="search.html">
@@ -31,7 +34,7 @@
                         </a>
                     </div>
                     <div>
-                        <a class="notification-item" href="notification.html">
+                        <a href="notification.html">
                             <i class="ri-notification-line"></i>
                         </a>
                     </div>
