--- a/message-view.html
+++ b/message-view.html
@@ -22,7 +22,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 m-0 p-0">
-                <div class="main-content">
+                <div class="message-main-content">
                     <div class="px-3 message-header bg-light py-3 d-flex justify-content-between align-items-center">
                         <div>
                             <button id="back-button">
@@ -46,10 +46,48 @@
                             </div>
                         </div>
                     </div>
-                    <div class="message-body">
+                    <div class="message-body px-3">
 
 
-
+                        <div class="they py-3">
+                            <div class="d-flex align-items-center">
+                                <div class="message-user-dp" style="background-image: url('assets/images/user/1.png');">
+                                </div>
+                                <p class="message-time ms-3">
+                                    8:26pm
+                                </p>
+                            </div>
+                            <p class="message-text mt-2">
+                                Hi Jimmy! Any update today?
+                            </p>
+                        </div>
+                        <div class="d-flex flex-column align-items-end me py-3">
+                            <div class="d-flex align-items-center">
+                                <p class="message-time me-3">
+                                    8:26pm
+                                </p>
+                                <div class="message-user-dp" style="background-image: url('assets/images/user/1.png');">
+                                </div>
+                            </div>
+                            <p class="message-text mt-2">
+                                lol ! No Update Today but working on Something you loved!
+                            </p>
+                            <p class="message-text mt-2">
+                                I am doing fine today! wbout u ?
+                            </p>
+                        </div>
+                        <div class="they py-3">
+                            <div class="d-flex align-items-center">
+                                <div class="message-user-dp" style="background-image: url('assets/images/user/1.png');">
+                                </div>
+                                <p class="message-time ms-3">
+                                    8:26pm
+                                </p>
+                            </div>
+                            <p class="message-text mt-2">
+                                <img src="assets/images/user/10.png" class="img-fluid" alt="">
+                            </p>
+                        </div>
 
 
                     </div>
@@ -60,9 +98,6 @@
 
 
     <!-- Delete Modal  -->
-    <!-- Button trigger modal -->
-
-    <!-- Modal -->
     <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
