Message Input Field

--- a/message-view.html
+++ b/message-view.html
@@ -61,12 +61,12 @@
                                 Hi Jimmy! Any update today?
                             </p>
                         </div>
-                        <div class="d-flex flex-column align-items-end me py-3">
+                        <div class="me d-flex flex-column align-items-end py-3">
                             <div class="d-flex align-items-center">
                                 <p class="message-time me-3">
                                     8:26pm
                                 </p>
-                                <div class="message-user-dp" style="background-image: url('assets/images/user/1.png');">
+                                <div class="message-user-dp" style="background-image: url('assets/images/user/2.png');">
                                 </div>
                             </div>
                             <p class="message-text mt-2">
@@ -89,6 +89,25 @@
                             </p>
                         </div>
 
+                        <div class="chat-box">
+
+                            <form action="">
+                                <textarea name="" class="form-control" id="" cols="27" rows="1"
+                                    placeholder="Type here . . ."></textarea>
+
+                                <button type="button" class="message-send-btn">
+                                    <i class="ri-send-plane-2-line"></i>
+                                </button>
+
+                                <button type="button" class="message-attachment-btn">
+                                    <label for="fileInput">
+                                        <i class="ri-attachment-2"></i>
+                                    </label>
+                                    <input type="file" name="photo" id="fileInput">
+                                </button>
+                            </form>
+
+                        </div>
 
                     </div>
                 </div>
