Message Page Done under review

--- a/message-view.html
+++ b/message-view.html
@@ -89,21 +89,19 @@
                             </p>
                         </div>
 
-                        <div class="chat-box">
+                        <div class="chat-box border-top">
 
-                            <form action="">
-                                <textarea name="" class="form-control" id="" cols="27" rows="1"
-                                    placeholder="Type here . . ."></textarea>
-
-                                <button type="button" class="message-send-btn">
-                                    <i class="ri-send-plane-2-line"></i>
-                                </button>
-
+                            <form class="d-flex justify-content-evenly align-items-center" action="">
                                 <button type="button" class="message-attachment-btn">
                                     <label for="fileInput">
                                         <i class="ri-attachment-2"></i>
                                     </label>
                                     <input type="file" name="photo" id="fileInput">
+                                </button>
+                                <textarea name="" class="form-control" id="" cols="27" rows="1"
+                                    placeholder="Type here . . ."></textarea>
+                                <button type="button" class="message-send-btn">
+                                    <i class="ri-send-plane-2-line"></i>
                                 </button>
                             </form>
 
