Item close btn added

--- a/message-view-2.html
+++ b/message-view-2.html
@@ -91,14 +91,17 @@
                         </div>
 
                         <div class="chat-box border-top">
-                            <div class="image-preview-wrap">
+                            <div class="image-preview-wrap d-flex align-items-center">
                                 <button type="button" class="message-attachment-btn me-3">
                                     <label for="fileInput">
                                         <i class="ri-file-add-line"></i>
                                     </label>
                                     <input type="file" name="photo" id="fileInput">
                                 </button>
-                                <img src="assets/images/user/5.png" alt="">
+                                <div class="msg-img-preview">
+                                    <img src="assets/images/user/5.png" alt="">
+                                    <button> <i class="ri-close-circle-fill"></i></button>
+                                </div>
                             </div>
                             <form class="d-flex justify-content-evenly align-items-center" action="">
                                 <button type="button" class="message-attachment-btn">
